--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation "com.typesafe.akka:akka-stream-kafka_2.13:${AlpakkaKafkaVersion}"
     implementation "com.typesafe.akka:akka-stream_2.13:${AkkaVersion}"
@@ -54,6 +55,11 @@ dependencies {
     implementation "com.typesafe.akka:akka-actor_2.13:${AkkaVersion}"
 
     implementation project(":commons")
+
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa"){
+        exclude group: "org.apache.tomcat", module: "tomcat-jdbc"
+    }
+    runtimeOnly 'com.h2database:h2'
 
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
@@ -82,4 +88,21 @@ tasks.withType(Pmd){
 pmd {
     ignoreFailures = true
     pmdTest.enabled=false
+}
+
+
+
+// make sure bootRun is executed when this task runs
+task runStandalone(dependsOn:bootRun) {
+    // TaskExecutionGraph is populated only after
+    // all the projects in the build have been evaulated https://docs.gradle.org/current/javadoc/org/gradle/api/execution/TaskExecutionGraph.html#whenReady-groovy.lang.Closure-
+    gradle.taskGraph.whenReady { graph ->
+        logger.lifecycle('>>> Setting spring.profiles.active to Standalone')
+        if (graph.hasTask(runStandalone)) {
+            // configure task before it is executed
+            bootRun {
+                args = ["--spring.profiles.active=standalone"]
+            }
+        }
+    }
 }
